shop component flex-wrap fixed

--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -8,13 +8,6 @@ div.title {
   margin-top: 40px;
 }
 
-/* style={{
-          width: "250px",
-          height: "400px",
-          display: "block",
-          margin: "0px auto"
-        }}  */
-
 a {
   font-family: Montserrat-Regular;
   font-weight: 400;
